--- a/src/assets/stylesheets/palette/_scheme.scss
+++ b/src/assets/stylesheets/palette/_scheme.scss
@@ -78,6 +78,9 @@
     --md-typeset-kbd-accent-color:     hsla(var(--md-hue), 15%, 94%, 0.2);
     --md-typeset-kbd-border-color:     hsla(var(--md-hue), 15%, 14%, 1);
 
+    // Typeset `table` color shades
+    --md-typeset-table-color:          hsla(var(--md-hue), 75%, 95%, 0.12);
+
     // Admonition color shades
     --md-admonition-bg-color:          hsla(var(--md-hue), 0%, 100%, 0.025);
 
